// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank request 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <div
      className="sh sh--y"
    >
      <h1
        className="sh-title"
      >
        Cosmic Incursion
      </h1>
    </div>
    <p
      className="m-v300 t--info"
    >
      We’ll use your contact info to send you email about the status of your report and to follow up with you if necessary.
    </p>
    <p
      className="m-v300 t--subinfo"
    >
      <strong>
        Your contact info will not be made public.
      </strong>
       
      <span>
        You can also 
        <a
          href="javascript:void(0)"
          onClick={[Function]}
        >
          submit without providing contact info
        </a>
        .
      </span>
    </p>
    <div
      className="txt"
    >
      <label
        className="txt-l"
        htmlFor="ContactPane-firstName"
      >
        First Name 
        <span
          className="t--req"
        >
          Required
        </span>
      </label>
      <input
        aria-required={true}
        className="txt-f"
        id="ContactPane-firstName"
        name="firstName"
        onChange={[Function]}
        placeholder="First Name"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
        value=""
      />
    </div>
    <div
      className="txt"
    >
      <label
        className="txt-l"
        htmlFor="ContactPane-lastName"
      >
        Last Name 
        <span
          className="t--req"
        >
          Required
        </span>
      </label>
      <input
        aria-required={true}
        className="txt-f"
        id="ContactPane-lastName"
        name="lastName"
        onChange={[Function]}
        placeholder="Last Name"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
        value=""
      />
    </div>
    <div
      className="txt"
    >
      <label
        className="txt-l"
        htmlFor="ContactPane-email"
      >
        Email 
        <span
          className="t--req"
        >
          Required
        </span>
      </label>
      <input
        aria-required={true}
        className="txt-f"
        id="ContactPane-email"
        name="email"
        onChange={[Function]}
        placeholder="Email"
        style={
          Object {
            "width": "100%",
          }
        }
        type="email"
        value=""
      />
    </div>
    <div
      className="txt"
    >
      <label
        className="txt-l"
        htmlFor="ContactPane-phone"
      >
        Phone
      </label>
      <input
        className="txt-f"
        id="ContactPane-phone"
        name="phone"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onPaste={[Function]}
        placeholder="Phone"
        style={
          Object {
            "width": "100%",
          }
        }
        type="tel"
        value=""
      />
    </div>
    <div
      className="m-v500 g"
    >
      <div
        className="cb"
      >
        <input
          checked={false}
          className="cb-f"
          id="ContactPane-remember"
          name="remember"
          onChange={[Function]}
          type="checkbox"
          value="true"
        />
        <label
          className="cb-l"
          htmlFor="ContactPane-remember"
        >
          Remember contact info on this computer
        </label>
      </div>
    </div>
  </div>
  <div
    className="g m-v500 css-1k8tu3j"
  >
    <div
      className="g--8 t--info m-v200 css-hn0yet"
    >
      <span>
        Please fill out 
        <span
          className="t--req"
        >
          required
        </span>
         fields to continue
      </span>
    </div>
    <button
      className="btn g--4"
      disabled={true}
      type="submit"
    >
      Submit Report
    </button>
  </div>
</form>
`;

exports[`filled request 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <div
      className="sh sh--y"
    >
      <h1
        className="sh-title"
      >
        Cosmic Incursion
      </h1>
    </div>
    <p
      className="m-v300 t--info"
    >
      We’ll use your contact info to send you email about the status of your report and to follow up with you if necessary.
    </p>
    <p
      className="m-v300 t--subinfo"
    >
      <strong>
        Your contact info will not be made public.
      </strong>
       
      <span>
        You can also 
        <a
          href="javascript:void(0)"
          onClick={[Function]}
        >
          submit without providing contact info
        </a>
        .
      </span>
    </p>
    <div
      className="txt"
    >
      <label
        className="txt-l"
        htmlFor="ContactPane-firstName"
      >
        First Name 
        <span
          className="t--req"
        >
          Required
        </span>
      </label>
      <input
        aria-required={true}
        className="txt-f"
        id="ContactPane-firstName"
        name="firstName"
        onChange={[Function]}
        placeholder="First Name"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
        value="Carol"
      />
    </div>
    <div
      className="txt"
    >
      <label
        className="txt-l"
        htmlFor="ContactPane-lastName"
      >
        Last Name 
        <span
          className="t--req"
        >
          Required
        </span>
      </label>
      <input
        aria-required={true}
        className="txt-f"
        id="ContactPane-lastName"
        name="lastName"
        onChange={[Function]}
        placeholder="Last Name"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
        value="Danvers"
      />
    </div>
    <div
      className="txt"
    >
      <label
        className="txt-l"
        htmlFor="ContactPane-email"
      >
        Email 
        <span
          className="t--req"
        >
          Required
        </span>
      </label>
      <input
        aria-required={true}
        className="txt-f"
        id="ContactPane-email"
        name="email"
        onChange={[Function]}
        placeholder="Email"
        style={
          Object {
            "width": "100%",
          }
        }
        type="email"
        value="marvel@alphaflight.gov"
      />
    </div>
    <div
      className="txt"
    >
      <label
        className="txt-l"
        htmlFor="ContactPane-phone"
      >
        Phone
      </label>
      <input
        className="txt-f"
        id="ContactPane-phone"
        name="phone"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onPaste={[Function]}
        placeholder="Phone"
        style={
          Object {
            "width": "100%",
          }
        }
        type="tel"
        value="(617) 555-1234"
      />
    </div>
    <div
      className="m-v500 g"
    >
      <div
        className="cb"
      >
        <input
          checked={false}
          className="cb-f"
          id="ContactPane-remember"
          name="remember"
          onChange={[Function]}
          type="checkbox"
          value="true"
        />
        <label
          className="cb-l"
          htmlFor="ContactPane-remember"
        >
          Remember contact info on this computer
        </label>
      </div>
    </div>
  </div>
  <div
    className="g m-v500 css-1k8tu3j"
  >
    <div
      className="g--8 t--info m-v200 css-hn0yet"
    />
    <button
      className="btn g--4"
      disabled={false}
      type="submit"
    >
      Submit Report
    </button>
  </div>
</form>
`;
